sumo/tests/duarouter/errors/unknown_measure/errors.duarouter.chrouter
Error: Routing algorithm 'CH' does not support weight-attribute 'blub'.
Quitting (on error).
